added to pet section

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         </div>
        
       </section>
-      <div class=" px-7 lg:px-20 bg-cardColor absolute lg:h-[350px] lg:w-[1260px] pt-56">
+      <div class=" px-7 lg:px-20 bg-cardColor absolute lg:h-[370px] lg:w-[1260px] pt-52 lg:pt-56">
        <div class="grid grid-cols-1 lg:grid-cols-3 space-y-5 lg:space-x-32"> 
           <div>
            <div class="flex items-center gap-2">
@@ -298,17 +298,24 @@
           <p>Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
         </div>
         <div>
-          <ul>
+          <ul class="space-y-2">
             <li>Find a pet</li>
             <li>Breeds</li>
             <li>Contact us</li>
           </ul>
         </div>
-        <div>
-          <h4>Follow Us</h4>
-         
+        <div class="space-x-3">
+          <h4 class="text-xl mb-4 lg:px-7">Follow Us</h4>
+         <div class="space-x-3">
+          <i class="fa-brands fa-facebook fa-2xl"></i>
+          <i class="fa-brands fa-instagram fa-2xl"></i>
+          <i class="fa-brands fa-linkedin fa-2xl"></i>
+          <i class="fa-brands fa-youtube fa-2xl"></i>
+         </div>
         </div>
        </div>
+       <p class="text-center mt-4">&copy; 2025 Sourav Mitra | All Rights Reserved.</p>
+
       </div>
     </footer>
 </body>
