added to responsive

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class=" py-10 px-8 lg:px-20">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- First Card -->
-                <div class="relative bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] p-6 rounded-lg shadow-lg flex flex-col lg:justify-center   w-[350px] h-[220px] lg:w-[450px] lg:h-[220px] overflow-hidden border border-blue-400">
+                <div class="relative bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] p-6 rounded-lg shadow-lg flex flex-col lg:justify-center  w-[350px] h-[220px] lg:w-[450px] lg:h-[220px] overflow-hidden ">
                     <!-- Text Content -->
                     <div class="relative z-10">
                         <p class="hidden text-xs font-semibold lg:flex ">Under Price</p>
@@ -272,7 +272,7 @@
     </main>
     <!-- Footer-Section -->
     <footer>
-      <section class="px-5">
+      <section class="px-2">
         <div class=" text-center lg:text-start py-10 mx-auto flex flex-col pl-6 w-full lg:flex-row justify-center items-center bg-bgColor lg:w-[800px] relative top-40 lg:top-32 z-10 rounded-md ">
           <!-- Input-Image -->
           <div>
@@ -288,7 +288,7 @@
         </div>
        
       </section>
-      <div class=" px-7 lg:px-20 bg-cardColor absolute lg:h-[370px] lg:w-[1260px] pt-52 lg:pt-56">
+      <div class=" px-7 lg:px-20 bg-cardColor absolute lg:max-h-[370px] lg:max-w-[1260px] pt-52 lg:pt-56">
        <div class="grid grid-cols-1 lg:grid-cols-3 space-y-5 lg:space-x-32"> 
           <div>
            <div class="flex items-center gap-2">
