added to grid section

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
             <h2 class="px-3 lg:px-0 font-adlam text-3xl font-bold">Everyday low Price</h2>
           </div>
           <!-- Dog-Card -->
-          <div class=" py-10 px-8 lg:px-20">
+          <div class=" py-10 px-20 lg:px-20">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- First Card -->
-                <div class="relative bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] p-6 rounded-lg shadow-lg flex flex-col lg:justify-center  w-[350px] h-[220px] lg:w-[450px] lg:h-[220px] overflow-hidden ">
+                <div class="relative bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] p-6  rounded-lg shadow-lg flex flex-col lg:justify-center  w-[350px] h-[220px] lg:w-[450px] lg:h-[220px] overflow-hidden ">
                     <!-- Text Content -->
                     <div class="relative z-10">
                         <p class="hidden text-xs font-semibold lg:flex ">Under Price</p>
@@ -273,7 +273,7 @@
     <!-- Footer-Section -->
     <footer>
       <section class="px-2">
-        <div class=" text-center lg:text-start py-10 mx-auto flex flex-col pl-6 w-full lg:flex-row justify-center items-center bg-bgColor lg:w-[800px] relative top-40 lg:top-32 z-10 rounded-md ">
+        <div class=" text-center lg:text-start py-10 mx-auto flex flex-col  w-11/12 lg:flex-row justify-center items-center bg-bgColor lg:w-[800px] relative top-40 lg:top-32 z-10 rounded-md ">
           <!-- Input-Image -->
           <div>
             <img class="w-1/2 mx-auto" src="images/cute-pet-mid.png" alt="">
@@ -282,13 +282,13 @@
            <div class="space-y-3">
             <h2 class="font-bold text-3xl">Get Pawsome News!</h2>
             <p class="">Exclusive training tips, ticks, product deals and more.</p>
-            <input type="text" placeholder="Enter email...." class="input input-bordered w-full max-w-xs" />
+            <input type="text" placeholder="Enter email...." class="input input-bordered w-11/12 max-w-xs" />
             <button class="btn  px-8 py-2 font-bold bg-colorPrimary">Subscribe</button>
            </div>
         </div>
        
       </section>
-      <div class=" px-7 lg:px-20 bg-cardColor absolute lg:max-h-[370px] lg:max-w-[1260px] pt-52 lg:pt-56">
+      <div class="w-full  px-7 lg:px-20 bg-cardColor absolute lg:max-h-[370px] lg:max-w-[1260px] pt-52 lg:pt-56">
        <div class="grid grid-cols-1 lg:grid-cols-3 space-y-5 lg:space-x-32"> 
           <div>
            <div class="flex items-center gap-2">
