footer section responsive done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
     <!-- Font-Asowme CDN -->
     <script src="https://kit.fontawesome.com/383b38ed75.js" crossorigin="anonymous"></script>
+    <!-- Favicon-Section -->
+     <link rel="shortcut icon" href="images/logo-header.png" type="image/x-icon">
     <title>Browse-Pets</title>
     <script>
         tailwind.config = {
@@ -248,10 +250,10 @@
          <!--Low-Price Section-->
          <section class="max-auto ">
           <div class="mt-20 px-5 lg:px-20">
-            <h2 class="px-3 lg:px-0 font-adlam text-3xl font-bold">Everyday low Price</h2>
+            <h2 class="px-3 lg:px-0 font-adlam lg:text-3xl text-2xl font-bold">Everyday low Price</h2>
           </div>
           <!-- Dog-Card -->
-          <div class="flex flex-col items-center lg:items-start py-10 px-5 lg:px-20 min-w-full max-auto lg:flex border-2 ">
+          <div class="flex flex-col items-center lg:items-start py-10 px-5 lg:px-20 min-w-full max-auto lg:flex  ">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 lg:gap-48 max-auto">
                 <!-- First Card -->
                 <div class="relative bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] p-6  rounded-lg shadow-lg flex flex-col lg:justify-center  w-[300px] h-[220px] lg:w-[600px] lg:h-[300px] overflow-hidden max-auto">
@@ -320,8 +322,8 @@
             <li>Contact us</li>
           </ul>
         </div>
-        <div class="space-x-3">
-          <h4 class="text-xl mb-4 lg:px-7">Follow Us</h4>
+        <div class="lg:space-x-3">
+          <h4 class="text-xl mb-4  lg:px-7">Follow Us</h4>
          <div class="space-x-3">
           <i class="fa-brands fa-facebook fa-2xl"></i>
           <i class="fa-brands fa-instagram fa-2xl"></i>
